작성한 자유게시물 목록

--- a/src/main/resources/templates/mypage/my-review.html
+++ b/src/main/resources/templates/mypage/my-review.html
@@ -99,6 +99,64 @@
                     <em class="my-review-count">50</em>개의 게시물이 있습니다.
                 </div>
                 <div class="my-review-list">
+                    <div>
+                        <div class="review-header">
+                            <div class="review-title">
+                                <div class="review-title-text">
+                                    야생마
+                                </div>
+                                <div>
+                                    <span class="review-modify">수정</span>
+                                    <span class="review-delete">삭제</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="review-main">
+                            <div class="review-main-img-wrap">
+                                <div class="review-main-img">
+                                    <div class="review-img">
+                                        <img src="https://i.ytimg.com/vi/FaHAi8bMBjw/hqdefault.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="review-main-img">
+                                    <div class="review-img">
+                                        <img src="https://i1.sndcdn.com/artworks-dI8Aqh5Byx07sn1M-fOCEsw-t500x500.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="review-main-img">
+                                    <div class="review-img">
+                                        <img src="https://i.ytimg.com/vi/FaHAi8bMBjw/hqdefault.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="review-main-img">
+                                    <div class="review-img">
+                                        <img src="https://i1.sndcdn.com/artworks-dI8Aqh5Byx07sn1M-fOCEsw-t500x500.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="review-main-img">
+                                    <div class="review-img">
+                                        <img src="https://i.ytimg.com/vi/FaHAi8bMBjw/hqdefault.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="review-main-img">
+                                    <div class="review-img">
+                                        <img src="https://i1.sndcdn.com/artworks-dI8Aqh5Byx07sn1M-fOCEsw-t500x500.jpg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="review-content">
+                                달려보자 닥다가닥다가닥히하 경쾌하다 닥다가닥다가닥히하 태양을 향해 불이나게 달리 자우와우와우와우와
+                                <br>
+                                넘어져도 일어나라 고지를 향해 앞만 보고 달리 자우와우와우와우와 검은 눈동자 윤기나는 갈기 딴딴한 내 허벅지 예 으랴
+                            </div>
+                        </div>
+                        <div class="review-main-footer">
+                            <div class="review-write-date">
+                                <span>2023.04.19</span>
+                                <span>자유게시판</span>
+                            </div>
+                        </div>
+                    </div>
                     <!--<div>
                         <div class="review-header">
                             <div class="review-title">
@@ -153,64 +211,6 @@
                         <div class="review-main-footer">
                             <div class="review-write-date">
                                 <span>2023.04.19</span>
-                                <span>자유게시판</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="review-header">
-                            <div class="review-title">
-                                <div class="review-title-text">
-                                    야생마
-                                </div>
-                                <div>
-                                    <span class="review-modify">수정</span>
-                                    <span class="review-delete">삭제</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="review-main">
-                            <div class="review-main-img-wrap">
-                                <div class="review-main-img">
-                                    <div class="review-img">
-                                        <img src="https://i.ytimg.com/vi/FaHAi8bMBjw/hqdefault.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="review-main-img">
-                                    <div class="review-img">
-                                        <img src="https://i1.sndcdn.com/artworks-dI8Aqh5Byx07sn1M-fOCEsw-t500x500.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="review-main-img">
-                                    <div class="review-img">
-                                        <img src="https://i.ytimg.com/vi/FaHAi8bMBjw/hqdefault.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="review-main-img">
-                                    <div class="review-img">
-                                        <img src="https://i1.sndcdn.com/artworks-dI8Aqh5Byx07sn1M-fOCEsw-t500x500.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="review-main-img">
-                                    <div class="review-img">
-                                        <img src="https://i.ytimg.com/vi/FaHAi8bMBjw/hqdefault.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="review-main-img">
-                                    <div class="review-img">
-                                        <img src="https://i1.sndcdn.com/artworks-dI8Aqh5Byx07sn1M-fOCEsw-t500x500.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="review-content">
-                                달려보자 닥다가닥다가닥히하 경쾌하다 닥다가닥다가닥히하 태양을 향해 불이나게 달리 자우와우와우와우와
-                                <br>
-                                넘어져도 일어나라 고지를 향해 앞만 보고 달리 자우와우와우와우와 검은 눈동자 윤기나는 갈기 딴딴한 내 허벅지 예 으랴
-                            </div>
-                        </div>
-                        <div class="review-main-footer">
-                            <div class="review-write-date">
-                                <span>2023.04.19</span>
                                 <span>후기게시판</span>
                             </div>
                         </div>
@@ -330,8 +330,8 @@
                                 <span>후기게시판</span>
                             </div>
                         </div>
-                    </div>
-                </div>-->
+                    </div>-->
+                </div>
             </div>
         </div>
             <div class="page-wrap">
@@ -449,7 +449,7 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script th:inline="javascript">
-    let myFreeBoards = [[${myFreeBoards}]];
+    let myFreeBoards = [[${myFreedBoards}]];
 </script>
 <script src="/js/mypage/my-review.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
