--- a/src/main/resources/templates/join-login/change-password.html
+++ b/src/main/resources/templates/join-login/change-password.html
@@ -24,7 +24,7 @@
                 <div class="password-inner-wrap">
                     <h3 class="password-title">비밀번호 재설정</h3>
 
-                    <form th:action="@{/member/change-password}" method="post" name="changePasswordForm">
+                    <form th:action="@{/member/change-password}" method="get" name="changePasswordForm">
                         <div class="input-div">
                             <div class="input-title">변경할 비밀번호</div>
                             <div class="input-include-div">
