--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -20,7 +20,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script type="text/javascript">
     $('.home-button').click(function(){
-        window.location.href = 'http://127.0.0.1:5500/templates/main/main.html';
+        window.location.href = '/main/main';
     });
 </script>
 </html>
