마이페이지 html 수정

--- a/src/main/resources/templates/mypage/my-review.html
+++ b/src/main/resources/templates/mypage/my-review.html
@@ -95,7 +95,16 @@
 
         <div class="main-wrap">
             <div class="my-review-wrap">
+                <div class="my-board-header">
+                    <div class="my-board-header-container">
+                        <span class="my-board-header-title">자유</span>
+                        <a th:href="@{/mypage/my-review}">
+                        <span class="my-board-header-title-select">활동후기</span>
+                        </a>
+                    </div>
+                </div>
                 <div class="my-review-count-wrap">
+                    총
                     <em class="my-review-count">50</em>개의 게시물이 있습니다.
                 </div>
                 <div class="my-review-list">
