--- a/src/main/resources/templates/funding/funding-initial-info.html
+++ b/src/main/resources/templates/funding/funding-initial-info.html
@@ -479,13 +479,20 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script th:inline="javascript">
-    const fundingDTO = [[${fundingDTO}]];
+    // let fileDTOS = null;
+    // const fundingDTO = [[${fundingDTO}]];
+
+    // if(fundingDTO == null || fundingDTO == undefined){
+    // }else {
+    //     fileDTOS = fundingDTO.fileDTOS;
+    // }
+
     globalThis.uuids;
     //===========================================
     FileList.prototype.forEach = Array.prototype.forEach;
-
+/*
     const $alertModal = $(".alert-modal-display");
-    const alertMsg = ['사진은 최소 4개이상 넣어 주세요.', '제목을 입력해주세요.', '내용을 입력해주세요.'];
+    const alertMsg = ['사진은 최소 4개이상 넣어 주세요.', '제목을 입력해주세요.', '내용을 입력해주세요.'];*/
 
     let $li = $(".imgList");
     let $file = null;
@@ -539,7 +546,7 @@
                 text +=`
                 <input type="hidden" name="fileDTOs[0].fileName" value="${$file.name}">
                 <input type="hidden" name="fileDTOs[0].fileUuid" value="${globalThis.uuids[0]}">
-                <input type="hidden" name="fileRepresentationalType" value="REPRESENTATION">
+                <input type="hidden" name="fileDTOs[0].fileRepresentationalType" value="REPRESENTATION">
                 <input type="hidden" name="fileDTOs[0].filePath" value="${toStringByFormatting(new Date())}">
 
                 `;
